minor bug fix in progress bars

--- a/subsavings.html
+++ b/subsavings.html
@@ -106,7 +106,12 @@
       <div class="form-group">
         <div style="display:flex">
           <label style="padding-right: 5px">Total Savings</label>
+          <div class="input-group mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text">$</span>
+              </div>
           <input type="number" class="form-control w-25" id="totalSavings">
+          </div>
           <button 
             class="btn btn-primary" 
             type="submit" 
